tests/js/error/semantics/builtin_array_reduce4.js
var __result1 = [1,2,3].reduce(function(a,v) { return a+v; });
var __expect1 = 6;

